--- a/Views/index.html
+++ b/Views/index.html
@@ -21,7 +21,7 @@
 
         <form class="form-group">
             <label class="input-group">
-            
+                <span>Selected: {{ selected }}</span>   
                 <input class="form-control col-md-6" v-model="nombreJugador" placeholder="Nombre jugador">
                 <input class="form-control col-md-6" v-model="edadJugador" placeholder="Edad jugador">
                 <input class="form-control col-md-6" v-model="equipoJugador" placeholder="Equipo jugador">
@@ -154,5 +154,123 @@
     })
 
 </script>
+
+<div id="appEquipos" class="col-md-12">
+
+    <form class="form-group">
+        <label class="input-group">
+            <input class="form-control col-md-6" v-model="nombreEquipo" placeholder="Nombre equipo">
+            <input class="form-control col-md-6" v-model="paisEquipo" placeholder="Pais equipo">
+            <input class="form-control col-md-6" v-model="nombreTecnico" placeholder="Nombre tecnico">
+            <div class="input-group-append">
+                <button class="btn btn-outline-success btn-lg" type="submit" @click="crearEquipo">Crear</button>
+            </div>
+        </label>
+        <label class="input-group">
+            <input class="form-control col-md-4" v-model="equipo_id" placeholder="Id equipo">
+            <input class="form-control col-md-4" v-model="nombreEquipo" placeholder="Nombre equipo">
+            <input class="form-control col-md-4" v-model="paisEquipo" placeholder="Pais equipo">
+            <input class="form-control col-md-4" v-model="nombreTecnico" placeholder="Nombre tecnico">
+            <div class="input-group-append">
+                <button class="btn btn-outline-info btn-lg" @click="actualizarEquipo(equipo_id)">Actualizar</button>
+            </div>
+        </label>
+        <label class="input-group">
+            <input class="form-control col-md-12" v-model="equipo_id" placeholder="Id equipo">
+            <div class="input-group-append">
+                <button class="btn btn-outline-danger btn-lg" @click="eliminarEquipo(equipo_id)">Eliminar</button>
+            </div>
+        </label>
+    </form>
+
+    <table class="table table-hover table-striped">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Nombre</th>
+                <th>País</th>
+                <th>Técnico</th>
+            </tr>
+        </thead>
+        <tbody >
+            <tr v-for="equipo in Equipos">
+                <td>{{equipo._id}}</td>
+                <td>{{equipo.nombreequipo}} </td>
+                <td>{{equipo.paisequipo}} </td>
+                <td>{{equipo.nombretecnico}} </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+</body>
+
+<script>
+const api = 'http://localhost:3000/api/equipo/'
+
+new Vue({
+    el: "#appEquipos",
+    data() {
+        return {
+            equipo_id: '',
+            nombreEquipo: '',
+            paisEquipo: '',
+            nombreTecnico: '',
+            Equipos: []
+        }
+    },
+    beforeMount() {
+        this.verEquipos()
+    },
+    methods: {
+        verEquipos() {
+            let self = this
+            axios.get(api).then(function (res) {
+                self.Equipos = JSON.parse(JSON.stringify(res.data))
+                console.log(self.Equipos)
+                //alert(JSON.stringify(Ligas))
+            }).catch(function (err) {
+                console.log(err)
+            })
+        },
+        crearEquipo() {
+            axios.post(api, {
+                nombreequipo: this.nombreEquipo,
+                paisequipo: this.paisEquipo,
+                nombretecnico:this.nombreTecnico
+            }).then(function (res) {
+                this.Equipos = res.data
+            }).catch(function (err) {
+                console.log(err)
+            })
+        },
+        eliminarEquipo(equipo_id) {
+            axios.delete(api + equipo_id, {
+                _id: this.equipo_id,
+                nombreequipo: this.nombreEquipo,
+                paisequipo: this.paisEquipo,
+                nombretecnico:this.nombreTecnico
+            }).then(function (res) {
+                console.log(res)
+            }).catch(function (err) {
+                console.log(err)
+            })
+        },
+        actualizarEquipo(equipo_id) {
+            axios.put(api + equipo_id, {
+                _id: this.equipo_id,
+                nombreequipo: this.nombreEquipo,
+                paisequipo: this.paisEquipo,
+                nombretecnico:this.nombreTecnico
+            }).then(function (res) {
+                console.log(res)
+            }).catch(function (err) {
+                console.log(err)
+            })
+        }
+    }
+})
+
+</script>
+
 
 </html>
