--- a/Views/index.html
+++ b/Views/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <h1 class="text-center">Ligas de futbol</h1>
+    <h1 class="text-center">Jugadores</h1>
 
 
     <div id="appPlayers" class="col-md-12">
@@ -155,6 +155,7 @@
 
 </script>
 
+<h1 class="text-center">Equipos</h1>
 <div id="appEquipos" class="col-md-12">
 
     <form class="form-group">
@@ -271,6 +272,7 @@ new Vue({
 })
 
 </script>
+   <h1 class="text-center">Ligas</h1>
  <div id="appLigas" class="col-md-12">
 
     <form class="form-group">
